   we use SINGLE-FLOAT and DOUBLE-FLOAT now. The names of the C functions have
   changed accordingly (Contributed by Lars Brinkhoff).

 - There was a problem with the variable capture when creating accessors
   methods for classes.

 - [Win32] Processes are now correctly listed with MP:ALL-PROCESSES (M. Goffioul)

 - DIRECTORY behaves more according to people's expectations
	(DIRECTORY "*/") => List all directories in current path
	(DIRECTORY "*.*") => List all files in current path
   This means you need to make two calls to DIRECTORY to get all the content of
   it, but it allows you to select whether you want to list files or
   not. Furthermore, the paths returned by DIRECTORY are more or less
   guaranteed to match the mask -- the exception are links, for whose the
   truename is returned.

 - [Win32] DIRECTORY did not take the drive letter into account.

 - [Win32] si_trap_fpe is now exported by ecl.dll

 - Instead of sharing a single string buffer (cl_env.token), ECL now has a pool
   of small strings which can be used for temporary operations. This fixes a
   number of problems with the reader.

 - DIRECTORY would always match NIL entries, independent of the mask. Now, the
   following two statements differ:
	(directory "foo*")       => ("foo")
	(directory "foo*.*")     => ("foo" "foo.log")

 - The code in contrib/sockets.lisp was not compatible with C++ because of
   multiple implicit pointer conversions, and additionally it had some pointer
   miscalculations.

 - GET-INTERNAL-REAL-TIME now works on Windows with 1/60s precision
   (contributed by Dustin Long)

 - When :INITFORM was a constant variable but not self evaluating (i.e. not T,
   NIL, or a keyword), it was not processed properly
	(defclass a () ((a :initform most-positive-fixnum)))
	(slot-value (make-instance a) 'a) => most-positive-fixnum


;;; Local Variables: ***
;;; mode:text ***
;;; fill-column:79 ***
;;; End: ***